apps/base/media-center/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.4.4.10685-ls318
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: videos
              mountPath: /movies
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: videos
          persistentVolumeClaim:
            claimName: jellyfin-videos
        - name: downloads
          persistentVolumeClaim:
            claimName: qbitt-download
