apps/base/media-center/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 7878
      protocol: TCP
  selector:
    app.kubernetes.io/name: radarr
