apps/base/media-center/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - radarr.nathan-fouere.com
  rules:
    - backendRefs:
        - name: radarr
          port: 80
